--- a/README
+++ b/README
@@ -1,16 +1,19 @@
                         jQuery plugins README
                         =====================
 
-Author: Author: Kentaro Ohkouchi <nanasess@fsm.ne.jp>
+Author: Kentaro Ohkouchi <nanasess@fsm.ne.jp>
 Date: [2011-06-05 02:23]
+
 
 Table of Contents
 =================
 1 jQuery.cuterss 
     1.1 Example 
     1.2 properties 
-    1.3 LICENSE 
-        1.3.1 see also. 
+2 jQuery.loader 
+    2.1 Example 
+3 LICENSE 
+    3.1 see also. 
 
 
 1 jQuery.cuterss 
@@ -39,13 +42,31 @@ RSS Feed reader plugin.
  format: feed formats.
  errorMessage: error messages.
 
-1.3 LICENSE 
+2 jQuery.loader 
+----------------
+
+Preloader plugin.
+
+2.1 Example 
 ============
+
+
+  <script type="text/javascript">//<![CDATA[
+      $(function() {
+          $('form').loader({
+              'loadingImg':'/js/jquery.loader/loading.gif'
+          });
+      });
+  //]]>
+  </script>
+
+3 LICENSE 
+----------
 
 BSD License (see COPYING)
 
-1.3.1 see also. 
-~~~~~~~~~~~~~~~~
+3.1 see also. 
+==============
 [http://www.opensource.org/licenses/bsd-license.php]
 
 
